--- a/src/components/css-examples/card/Card.css
+++ b/src/components/css-examples/card/Card.css
@@ -47,6 +47,7 @@ body{
     text-transform: uppercase;
     font-size: 12px;
     padding: 2px 10px;
+    text-align: center;
 }
 .tag-pink{
     background-color: pink;
@@ -77,6 +78,8 @@ body{
 }
 .user-info h5{
     margin: 0;
+    text-transform: capitalize;
+    font-size: 15px;
 }
 .user-info small{
     color:#555;
