--- a/src/home/App.css
+++ b/src/home/App.css
@@ -245,7 +245,7 @@ display: none !important;
 .dots-image-2 {
   width: 70%;
 }
-.resume-type {
+/* .resume-type {
   margin: 0rem 0;
   top: -.2rem;
 }
@@ -254,7 +254,7 @@ display: none !important;
 }
 .title-uppercase {
   margin: 0 0 .3rem;
-}
+} */
 .review-author {
   margin-top: 2.7rem;
 }
