--- a/src/App.css
+++ b/src/App.css
@@ -54,7 +54,7 @@
         padding-bottom: 5rem;
     }
     .col-project-box {
-        margin-top: 20px;
+        margin-top: 15px;
     }
     .title-uppercase {
         margin: 0 0 2rem;
@@ -86,6 +86,9 @@
     .col-partner {
         margin-top: 1.7rem;
     }
+    .service-list{
+        margin-bottom: 2rem;
+    }
     .service-list li {
         margin-bottom: .7rem;
         display: inline-block;
@@ -114,4 +117,40 @@
     .dots-image-2 img{
         width: 90%;
     }
+
+    .section-3 .h5.link-arrow {
+        margin: 20px auto 0;
+    }
+  
+}
+
+
+@media(max-width:510px){
+    .icon-quote {
+        margin-bottom: 10px;
+    }
+    .progress {
+        margin-bottom: 15px;
+    }
+    .progress-bars {
+        margin-top: 1.7rem;
+    }
+    /* .col-project-box {
+        margin-top: 10px;
+    } */
+    .mxdn{
+        display: none;
+      }
+      .uppercase {
+        margin: 0 0 .5rem;
+    }
+    .project-box {
+        padding-bottom: 20%;
+    }
+    .col-partner {
+        margin-top: 1rem;
+    }
+    /* .title-uppercase {
+      margin: 0 0 .3rem;
+    } */
 }
