--- a/src/App.css
+++ b/src/App.css
@@ -126,6 +126,9 @@
 
 
 @media(max-width:510px){
+    .service-list{
+        margin-bottom: .5rem;
+    }
     .icon-quote {
         margin-bottom: 10px;
     }
@@ -145,7 +148,7 @@
         margin: 0 0 .5rem;
     }
     .project-box {
-        padding-bottom: 20%;
+        padding-bottom: 23%;
     }
     .col-partner {
         margin-top: 1rem;
