--- a/src/App.css
+++ b/src/App.css
@@ -42,7 +42,9 @@
     main.pagepiling > div > div{
         transform: translate3d(0px, 0px, 0px) !important;
     } */
-
+    .project-box {
+        padding-bottom: 32%;
+    }
     .project-box-inner {
         padding: 1.14rem 1.928rem;
     }
@@ -148,12 +150,12 @@
         margin: 0 0 .5rem;
     }
     .project-box {
-        padding-bottom: 23%;
+        padding-bottom: 28%;
     }
     .col-partner {
         margin-top: 1rem;
     }
-    /* .title-uppercase {
-      margin: 0 0 .3rem;
-    } */
+    .title-uppercase {
+        margin: 0 0 1.5rem;
+    }
 }
