--- a/src/components/app/expenseTracker/Main.css
+++ b/src/components/app/expenseTracker/Main.css
@@ -93,6 +93,8 @@ body {
   font-size: 16px;
   padding: 10px;
   width: 100%;
+  background: transparent;
+  color: #555;
 }
 
 .container-expense .btn {
