--- a/src/components/app/loveCalculator/Love.css
+++ b/src/components/app/loveCalculator/Love.css
@@ -38,6 +38,9 @@
     border: 1px solid #ccc;
     color:#333;
 }
+.love-container input:focus{
+    color:#333;
+}
 .love-container .btn{
     width: 100%;
     padding: 15px 20px;
