--- a/src/components/css-examples/login/Login.css
+++ b/src/components/css-examples/login/Login.css
@@ -19,7 +19,7 @@ a{
 button img{
     max-width: 100%;
     width: 20px;
-    margin-right: 5px;
+    margin-right: 15px;
 }
 .login-container{
     background-color: #fff;
@@ -79,6 +79,7 @@ button img{
     border-radius: 3px;
     background: transparent;
     font-size: 14px;
+    color:#555;
 }
 .checkbox-tontainer{
     display: flex;
